Design look of validation result for one annotation.

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -66,19 +66,14 @@
 
     }
     &__valiondate-dialog__content {
-        font-size: 0.8em;
         h2 {
-            line-height: 1em;
-            margin-bottom: 3px;
-            &::before {
-                color: red;
-                content: '!!! ';
-            }
-
+            left: 1px;
+            padding-bottom: 3px;
+            position: relative;
         }
         table {
             border-collapse: collapse;
-            font-size: 0.8em;
+            font-size: 0.65em;
             margin-bottom: 20px;
             width: 100%;
             th {
