Create the distribution for release 4.1.9.

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -59,6 +59,14 @@
         }
     }
     &__valiondate-dialog__content {
+        h1 {
+            font-size: 1em;
+            font-weight: normal;
+        }
+        h2 {
+            font-size: 1em;
+            font-weight: normal;
+        }
         table {
             border-collapse: collapse;
             font-size: 0.65em;
