Add the line-height button.

--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -118,4 +118,7 @@
     &__setting-button {
         background: url("./images/btn_setting_16.png");
     }
+    &__line-height-button {
+        background: url("./images/btn_line_height_16.png");
+    }
 }
