--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -199,6 +199,7 @@
         background-color: yellow;
         display: block;
         font-size: x-small;
+        line-height: normal;
         opacity: 0.6;
         white-space: nowrap;
         &:hover,
