Bug fix: Set default line-height to the text-editor__enitty-pane.

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -150,6 +150,7 @@
         box-shadow: 1px 1px 15px #f00;
     }
     &__entity-pane {
+        line-height: normal;
         position: relative;
         top: -28px;
         z-index: 1;
