--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -59,6 +59,15 @@
             box-shadow: inset 1px 1px 3px #000;
         }
     }
+    &__view-button {
+        background: url("./images/btn_view_16.png");
+    }
+    &__relation-button {
+        background: url("./images/btn_relation_16_1.png");
+    }
+    &__simple-button {
+        background: url("./images/btn_simple_16.png");
+    }
     &__read-button {
         background: url("./images/btn_read_16.png");
     }
