Add a new button of the term view mode.

--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -61,9 +61,13 @@
     }
     &__view-button {
         background: url("./images/btn_view_16.png");
+        background-size: cover;
+    }
+    &__term-button {
+        background: url("./images/btn_term_16.png");
     }
     &__relation-button {
-        background: url("./images/btn_relation_16_1.png");
+        background: url("./images/btn_relation_16.png");
     }
     &__simple-button {
         background: url("./images/btn_simple_16.png");
