--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -1,5 +1,7 @@
+@acitveColor : #ffe;
+
 .active() {
-    background-color: #ffe;
+    background-color: @acitveColor;
 }
 .textae-editor {
     border: 1px solid black;
@@ -26,6 +28,10 @@
     }
     &_instance-mode.textae-editor--active {
         .active;
+        .textae-editor__body__text-box__paragraph {
+            background-color: fade(@acitveColor, 80%);
+            z-index: 2;
+        }
     }
     &_relation-mode.textae-editor--active {
         background-color: #ffedee;
@@ -36,6 +42,10 @@
             /* prefer calculated line height */
             p {
                 line-height: inherit;
+            }
+            &__paragraph
+            {
+                position: relative;
             }
         }
         &__annotation-box {
@@ -250,7 +260,7 @@
     }
     /* instance edit mode */
     &_instance-mode {
-        .text-editor {
+        .textae-editor {
             &__relation:hover,
             &__relation.hover {
                 z-index: 5;
