Focus a selected span.

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -86,6 +86,9 @@
             text-shadow: 1px 1px 1px #00d;
             padding: 1px 0;
         }
+        &:focus {
+            outline-style: none;
+        }
         &.ui-selected {
             background-color: rgba(255, 200, 100, 0.9);
             color: #00d;
