Focus selected element.

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -181,6 +181,9 @@
             box-shadow: 1px 1px 10px #600;
             text-shadow: 1px 1px 1px #600;
         }
+        &:focus {
+            outline-style: none;
+        }
         &.ui-selected {
             background-color: yellow;
         }
