Emphasis selected style of entity labels.

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -163,7 +163,8 @@
     }
     &__type-label.ui-selected,
     &__type:hover &__type-label.ui-selected {
-        box-shadow: 1px 1px 15px #f00;
+        box-shadow: 0 0 0 2pt red;
+        z-index: 4;
     }
     &__entity-pane {
         line-height: normal;
