--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -1,4 +1,7 @@
 @acitveColor : #ffe;
+@baseColor: rgb(100, 100, 215);
+@border: fade(@baseColor, 80%);
+@selected: red;
 
 .active() {
     background-color: @acitveColor;
@@ -77,8 +80,8 @@
         }
     }
     &__span {
-        background-color: rgba(100, 100, 215, 0.5);
-        border-color: #666;
+        background-color: fade(@baseColor, 50%);
+        border-color: @border;
         border-style: solid;
         border-width: 1px 0;
         white-space: pre;
@@ -91,6 +94,7 @@
         }
         &.ui-selected {
             background-color: rgba(255, 200, 100, 0.9);
+            border-color: @selected;
             color: #00d;
         }
         &--wrap {
@@ -99,13 +103,12 @@
         &--block {
             background-color: rgba(255, 100, 215, 0.5);
             &.ui-selected {
-                background-color: rgba(255, 100, 100, 0.9);
                 color: #00d;
             }
         }
     }
     &__grid {
-        border-color: #dda;
+        border-color: @border;
         border-style: solid;
         border-width: 0 1px;
         overflow: visible;
@@ -120,10 +123,10 @@
         text-align: center;
         white-space: nowrap;
         &-label {
-            border-color: #a9a9a9;
+            border-color: @border;
             border-radius: 4px;
             border-style: solid;
-            border-width: 1px;
+            border-width: 1px 0;
             line-height: 16px;
             overflow: hidden;
             position: relative;
@@ -152,9 +155,8 @@
     }
     &__type:hover &__entity-pane,
     &__type:hover &__type-label {
-        z-index: 3;
+        z-index: 4;
     }
-    &__type:hover &__entity,
     &__type:hover &__type-label {
         box-shadow: 1px 1px 10px #600;
     }
@@ -163,7 +165,7 @@
     }
     &__type-label.ui-selected,
     &__type:hover &__type-label.ui-selected {
-        box-shadow: 0 0 0 2pt red;
+        box-shadow: 0 0 0 2pt @selected;
         z-index: 4;
     }
     &__entity-pane {
@@ -171,12 +173,16 @@
         position: relative;
         top: -28px;
         z-index: 1;
+        &.ui-selected {
+          z-index: 4;
+        }
     }
     /* entity */
     &__entity {
-        background-color: #add8e6;
+        background-color: @border;
         border-radius: 6px;
         border-style: solid;
+        border-width: 1px;
         display: inline-block;
         height: 12px;
         vertical-align: top;
@@ -186,7 +192,7 @@
             text-shadow: 1px 1px 1px #600;
         }
         &.ui-selected {
-            background-color: yellow;
+            background-color: fade(@selected, 80%);
         }
         /* modification */
         &.textae-editor__negation::before,
@@ -243,10 +249,16 @@
     /* term centric mode */
     &_term-mode {
         .textae-editor {
+            &__grid {
+              border-style: none;
+            }
             &__type {
                 height: 18px;
                 margin-bottom: 0;
                 padding-top: 0;
+            }
+            &__type-label {
+                border-width: 1px 0 0 0;
             }
             &__relation,
             &__relation__label {
