Change config format - Rename a attribute from name to id. - Remove a uri attribute. - Add a label attribute. - Show id with label on the pallet. - Fix test data. - Refactor modules.  - TypeContainer.  - EntityRenderer.  - Pallet.

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -12,9 +12,10 @@
     border: solid 2px #333;
     font-size: x-small;
     margin: 0;
-    max-height: 300px;
+    max-height: 450px;
     overflow-x: hidden;
     padding: 0;
+    position: fixed;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -32,8 +33,9 @@
     td {
         .table;
         &.textae-editor__type-pallet__entity-type__label {
+            overflow-x: hidden;
             padding: 5px;
-            max-width: 800px;
+            max-width: 500px;
         }
     }
     table {
