--- a/src/app/textae.html
+++ b/src/app/textae.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
 
   <link rel="stylesheet" href="vender/jquery-ui.min.css" />
-  <link rel="stylesheet" href="vender/toastr/toastr.min.css" />
+  <link rel="stylesheet" href="vender/toastr/build/toastr.min.css" />
   <link rel="stylesheet" href="lib/css/textae-{{version}}.min.css">
   <link rel="stylesheet" href="textae.css">
 
@@ -13,7 +13,7 @@
   <script src="vender/jquery-ui.min.js"></script>
   <script src="vender/jquery.jsPlumb-1.5.2-min.js"></script>
   <script src="vender/underscore/underscore-min.js"></script>
-  <script src="vender/toastr/toastr.min.js"></script>
+  <script src="vender/toastr/build/toastr.min.js"></script>
   <script src="lib/textae-{{version}}.min.js"></script>
 </head>
 
