Switch a dialog from a prompt to edit the label of elements - Show old value in the dialog. - Decide by the enter key or the OK button. - Cancel by the esc key or the close button. - Refactoring  - Remove unused import  - Refactor EditorDialog  - Enable set buttons option to EditorDialog

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -49,6 +49,11 @@
             .file
         }
     }
+    &__edit-id-dialog {
+        &__id {
+          width: 498px;
+        }
+    }
     &__setting-dialog {
         .common;
         &__label {
