--- a/src/app/textae.html
+++ b/src/app/textae.html
@@ -14,6 +14,7 @@
   <script src="vender/jquery.jsPlumb-1.5.2-min.js"></script>
   <script src="vender/underscore/underscore-min.js"></script>
   <script src="vender/toastr/build/toastr.min.js"></script>
+  <script src="vender/element-closest/closest.js"></script>
   <script src="lib/textae-{{version}}.min.js"></script>
 </head>
 
