Focus the editor instead of dismiss browser selections - Add elements for test  - Add a tab index to an editor  - Add a external control - Split select/unselect the editor and cancelSelect - Observe focus and blur events - Focus the editor  - when a type of entity is clicked  - when the Esc key is pushed  - when an relation is created - Remove the dismissBrowserSelection - Fix the tool behavior  - Prevent unselect an editor when the controller is clicked  - Disable all buttons when an editor is un selected  - Add an unselect editor API  - Observe editor's key events - Refactor  - Rewrite in ES2015  - Add comment  - Remove unused  - Move a procedure from the view to the model that binding the selection model to the model  - Remove old generated file  - Replace jQuery.on with delegate  - Replace jQuery.on with addEventLisntener

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -7,6 +7,9 @@
     background-color: @acitveColor;
 }
 .textae-editor {
+    &:focus {
+        outline-style: none;
+    }
     border: 1px solid black;
     &--wait {
         cursor: wait;
