Prevent focusing the veil - Focus of the veil is not focus of the editor, but I can't tell the difference. - Because event from pseudo-elements has no difference from real elements. - Change the veil from pseudo-elements to a div. - Change a creation of the veil from per editors to per the tool.

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -11,20 +11,6 @@
         outline-style: none;
     }
     border: 1px solid black;
-    &--wait {
-        cursor: wait;
-    }
-    &--wait::before {
-        content: '';
-        display: block;
-        height: 100%;
-        left: 0;
-        opacity: 0;
-        position: fixed;
-        top: 0;
-        width: 100%;
-        z-index: 200;
-    }
     .hidden {
         visibility: hidden;
     }
@@ -320,6 +306,16 @@
         .textae-editor__relation__label.ui-selected {
             z-index: 2;
         }
+    }
+    &-veil {
+        cursor: wait;
+        height: 100%;
+        left: 0;
+        opacity: 0;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 200;
     }
 }
 /* relation */
