Pull left the pallet when the pallet protrudes from right of the window

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -13,7 +13,7 @@
     font-size: x-small;
     margin: 0;
     max-height: 450px;
-    overflow-x: hidden;
+    overflow-x: scroll;;
     padding: 0;
     position: fixed;
     -webkit-touch-callout: none;
