To show candidates of the autocomplete, overwrite a style of the jQuery-ui dialog

--- a/src/lib/css/textae.less
+++ b/src/lib/css/textae.less
@@ -9,3 +9,7 @@
     width: 480px;
     color: #ddd;
 }
+/* To show candidates of the autocomplete, overwrite a style of the jQuery-ui dialog */
+.ui-dialog {
+    overflow: visible;
+}
