--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -7,6 +7,7 @@
     background-color: @acitveColor;
 }
 .textae-editor {
+    line-height: 41px;
     overflow: hidden;
     &:focus {
         outline-style: none;
