Set default line-height to the textae-eidtor To fill the gap of behavior of the window.getComputedStyle between the Chrome or the Safari and the Firefox. It returns 'normal' unless the line-height style on the Chrome or the Safari. It returns pixel value like '19.8px' unless the line-height style on the Firefox. So, the default line-height style provide a common behavior of the window.getComputedStyle.

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -60,6 +60,7 @@
         // filter: progid: DXImageTransform.Microsoft.Gradient(StartColorStr='#DDDDFF', EndColorStr='#FFFFFF', GradientType=1);
         bottom: 0;
         height: 20px;
+        line-height: normal;
         opacity: 0.9;
         overflow-y: hidden;
         position: relative;
