--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -13,6 +13,7 @@
     font-size: x-small;
     margin: 0;
     max-height: 450px;
+    line-height: normal;
     overflow-x: scroll;;
     padding: 0;
     position: fixed;
