Each editors have a control

--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -31,6 +31,7 @@
         font-weight: bold;
         text-shadow: 2px 2px 5px #555;
         font-size: 20px;
+        line-height: normal;
         vertical-align: bottom;
         a {
             text-decoration: none;
