--- a/src/app/textae.html
+++ b/src/app/textae.html
@@ -15,11 +15,11 @@
   <script src="vender/underscore/underscore-min.js"></script>
   <script src="vender/toastr/build/toastr.min.js"></script>
   <script src="vender/element-closest/closest.js"></script>
+  <script src="vender/sticky-kit/dist/sticky-kit.min.js"></script>
   <script src="lib/textae-{{version}}.min.js"></script>
 </head>
 
 <body>
-  <div class="textae-control"></div>
   <div class="textae-editor"></div>
 </body>
 
