Add control option

--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -137,3 +137,13 @@
         visibility: visible;
     }
 }
+.textae-editor--control-visible {
+  .textae-control {
+      visibility: visible !important;
+  }
+}
+.textae-editor--control-hidden {
+  .textae-control {
+      visibility: hidden !important;
+  }
+}
