Fix autocomplete appearance

--- a/src/lib/css/textae.less
+++ b/src/lib/css/textae.less
@@ -1,5 +1,6 @@
 @import "textae-control.less";
 @import "textae-editor-dialog.less";
+@import "textae-editor-dialog-autocomplete.less";
 @import "textae-editor-type-pallet.less";
 @import "textae-editor.less";
 
@@ -13,8 +14,4 @@
     height: 240px;
     width: 480px;
     color: #ddd;
-}
-/* To show candidates of the autocomplete, overwrite a style of the jQuery-ui dialog */
-.ui-dialog {
-    overflow: visible;
 }
