--- a/src/lib/css/textae.less
+++ b/src/lib/css/textae.less
@@ -1,3 +1,8 @@
+@import "textae-control.less";
+@import "textae-editor-dialog.less";
+@import "textae-editor-type-pallet.less";
+@import "textae-editor.less";
+
 * {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
