Change one CSS file from some styles

--- a/src/lib/css/textae.less
+++ b/src/lib/css/textae.less
@@ -2,9 +2,12 @@
 @import "textae-editor-dialog.less";
 @import "textae-editor-dialog-autocomplete.less";
 @import "textae-editor-type-pallet.less";
+@import "modules/jquery-ui.min.less";
+@import "modules/toastr.min.less";
 @import "textae-editor.less";
 
-* {
+.textae-editor,
+.textae-editor *{
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     font-family: verdana, arial, helvetica, sans-serif;
