--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -9,6 +9,8 @@
 .textae-editor {
     line-height: 41px;
     overflow: hidden;
+    position: relative;
+    top: 22px;    
     &:focus {
         outline-style: none;
     }
