--- a/src/lib/css/textae.less
+++ b/src/lib/css/textae.less
@@ -4,6 +4,7 @@
 @import "textae-editor-type-pallet.less";
 @import "modules/jquery-ui.min.less";
 @import "modules/toastr.min.less";
+@import "modules/jsoneditor.less";
 @import "textae-editor.less";
 
 .textae-editor,
