ADJUSTED the position of textae div

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -10,7 +10,7 @@
     line-height: 41px;
     overflow: hidden;
     position: relative;
-    top: 22px;    
+    padding: 2px;
     &:focus {
         outline-style: none;
     }
