--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,6 +1,6 @@
-<div class="notice">
-<ul>
-<li>Developed and maintained by <a href="http://dbcls.rois.ac.jp">DBCLS</a></li>
-<li>Contact: admin at pubannotation.org</li>
-</ul>
+<!-- <div style="text-align: left">
+<i>Developed and Services by</i>
+<img src="{{site.baseurl}}/img/dbcls-logo.png" style="height:40px; vertical-align: middle">
+<img src="{{site.baseurl}}/img/nbdc-logo.png" style="height:30px; vertical-align: middle">
 </div>
+ -->
