--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -1,7 +1,8 @@
-<a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/img/textae-logo.png" alt="Logo" id='logo'></a>
+<a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/img/textae-logo3.png" alt="Logo" id='logo'></a>
 
 <ul class="main-nav">
 	<li><a href="{{site.baseurl}}/">Docs</a></li>
-	<li><a title="A full-featured editor implemented using TextAE" href="http://textae.pubannotation.org/editor.html?mode=edit">Editor</a></li>
+	<li><a title="A full-featured editor implemented using TextAE" href="http://textae.pubannotation.org/editor.html">Editor</a></li>
+	<li><a title="A repository of TextAE configurations" href="http://textae-configs.pubannotation.org">Configs</a></li>
 	<li><a href="https://github.com/pubannotation/textae">GitHub</a></li>
 </ul>
