--- a/_layouts/default_with_textae.html
+++ b/_layouts/default_with_textae.html
@@ -5,37 +5,27 @@
 	<meta charset="utf-8">
 	<title>{{ page.title }}</title>
 	<meta name="viewport" content="width=device-width">
-
-	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/themes/smoothness/jquery-ui.css" />
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
-	<link rel="stylesheet" href="http://textae.pubannotation.org/lib/css/textae.min.css" />
-
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/layout.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/pitch.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/docs.css" />
 	<script src="https://use.fontawesome.com/d09f0623af.js"></script>
-
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
-	<script src="http://textae.pubannotation.org/vender/jquery.jsPlumb-1.5.2-min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-	<script src="https://cdn.polyfill.io/v2/polyfill.js?features=Element.prototype.closest"></script>
-	<script src="https://cdn.jsdelivr.net/jquery.sticky-kit/1.1.2/jquery.sticky-kit.min.js"></script>
+	<link rel="stylesheet" href="http://textae.pubannotation.org/lib/css/textae.min.css" />
 	<script src="http://textae.pubannotation.org/lib/textae.min.js"></script>
 </head>
 
-<body class="wrap">
-	<div id="header" class="frame">
-		{% include _header.html %}
-	</div>
+<body>
+	<div id="canvas">
+		<div id="header" class="frame">
+			{% include _header.html %}
+		</div>
 
-	<div id="main">
-		{{ content }}
-	</div>
+		<div id="main">
+			{{ content }}
+		</div>
 
-	<div id="footer" class="frame">
-		{% include _footer.html %}
+		<div id="footer" class="frame">
+			{% include _footer.html %}
+		</div>
 	</div>
 </body>
 
