--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -165,13 +165,6 @@
     &__attribute {
         height: 18px;
     }
-    &__attribute:hover {
-        box-shadow: 1px 1px 3px #600;
-
-        .textae-editor__attribute-buttons {
-            display: flex;
-        }
-    }
     &__attribute-buttons {
         display: none;
         flex-direction: row;
@@ -179,9 +172,6 @@
         position: relative;
         top: -26px;
         left: 0;
-        &:hover {
-            display: flex;
-        }
     }
     &__attribute-button {
         width: 20px;
@@ -211,11 +201,6 @@
                 content: "\f1f8";
             }
         }
-    }
-    &__attribute-button:hover {
-        margin-top: 1px;
-        box-shadow: inset 0 1px 0 0 rgba(100, 100, 100, .5);
-        cursor: pointer;
     }
     &__entity-pane {
         line-height: normal;
@@ -365,6 +350,26 @@
         }
         .textae-editor__relation__label.ui-selected {
             z-index: 2;
+        }
+    }
+
+    &--instance-mode&--editable,
+    &--term-mode&--editable {
+        .textae-editor__attribute:hover {
+            box-shadow: 1px 1px 3px #600;
+
+            .textae-editor__attribute-buttons {
+                display: flex;
+
+                &:hover {
+                    display: flex;
+                }
+            }
+        }
+        .textae-editor__attribute-button:hover {
+            margin-top: 1px;
+            box-shadow: inset 0 1px 0 0 rgba(100, 100, 100, .5);
+            cursor: pointer;
         }
     }
     &-veil {
