--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -162,6 +162,7 @@
     padding: 10px;
     border: solid 1px gray;
     box-shadow: 2px 2px 1px 1px rgba(0, 0, 0, .4);
+    width : 292px;
     background-color: white;
     z-index: 8;
     &--show {
