MODIFY: hide setting and help buttons on the context menu.

--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -182,4 +182,10 @@
     .textae-control__separator {
         border: 1px solid #aad;
     }
+
+    > :nth-last-of-type(1),
+    > :nth-last-of-type(2),
+    > :nth-last-of-type(3)  {
+        display: none;
+    }
 }
