MODIFY: change attribute name 'type' to 'value', and  replace input's position on edit dialog.

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -54,6 +54,14 @@
           width: 498px;
         }
     }
+    &__edit-value-and-pred-dialog {
+        &__container {
+            display: flex;
+        }
+        &__input-box {
+            width: 50%;
+        }
+    }
     &__setting-dialog {
         .common;
         &__label {
