ADD: show used number of each labels on the pallet.

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -38,6 +38,9 @@
             padding: 5px;
             max-width: 500px;
         }
+        &.textae-editor__type-pallet__entity-type__used-number {
+            padding: 5px;
+        }
     }
     table {
         width: 100%;
