MODIFY: change grid structure and adjust grid position.

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -162,10 +162,13 @@
         box-shadow: 0 0 0 2pt @selected;
         z-index: 4;
     }
+    &__attribute {
+        height: 18px;
+    }
     &__entity-pane {
         line-height: normal;
         position: relative;
-        top: -28px;
+        top: 4px;
         z-index: 1;
         &.ui-selected {
           z-index: 4;
