--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -165,6 +165,58 @@
     &__attribute {
         height: 18px;
     }
+    &__attribute:hover {
+        box-shadow: 1px 1px 3px #600;
+
+        .textae-editor__attribute-buttons {
+            display: flex;
+        }
+    }
+    &__attribute-buttons {
+        display: none;
+        flex-direction: row;
+        justify-content: flex-end;
+        position: relative;
+        top: -26px;
+        left: 0;
+        &:hover {
+            display: flex;
+        }
+    }
+    &__attribute-button {
+        width: 20px;
+        min-width: 20px;
+        height: 20px;
+        margin: 0 2px;
+        border: solid 1px gray;
+        border-radius: 50%;
+        box-shadow: 0 1px 2px 0 rgba(100, 100, 100, .5);
+        background-color: white;
+        &--add {
+            padding-top: 1px;
+            &:before {
+                font-family: FontAwesome;
+                content: "\f067";
+            }
+        }
+        &--edit {
+            &:before {
+                font-family: FontAwesome;
+                content: "\f040";
+            }
+        }
+        &--delete {
+            &:before {
+                font-family: FontAwesome;
+                content: "\f1f8";
+            }
+        }
+    }
+    &__attribute-button:hover {
+        margin-top: 1px;
+        box-shadow: inset 0 1px 0 0 rgba(100, 100, 100, .5);
+        cursor: pointer;
+    }
     &__entity-pane {
         line-height: normal;
         position: relative;
