--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -27,7 +27,7 @@
     -ms-user-select: none;
     user-select: none;
     width: auto;
-    z-index: 250;
+    z-index: 90;
     table {
         .table;
     }
@@ -48,6 +48,9 @@
         }
         &.textae-editor__type-pallet__entity-type__use-number {
             padding: 5px;
+        }
+        & .textae-editor__type-pallet__entity-type__add {
+            padding: 3px 5px;
         }
     }
     table {
