FIX: hide context menu when editors are initalized.

--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -161,6 +161,7 @@
 
 /* context menu */
 .textae-context-menu {
+    display: none;
     position: absolute;
     padding: 10px;
     border: solid 1px gray;
