MODIFY: centering attribute buttons.

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -168,7 +168,7 @@
     &__attribute-buttons {
         display: none;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: center;
         position: relative;
         top: -26px;
         left: 0;
