--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -42,18 +42,18 @@
         input {
             cursor: pointer;
         }
-        &.textae-editor__type-pallet__entity-type__label,
-        &.textae-editor__type-pallet__entity-type__short-label {
+        &.textae-editor__type-pallet__label,
+        &.textae-editor__type-pallet__short-label {
             overflow-x: hidden;
             padding: 5px;
             max-width: 500px;
             text-align: left;
         }
-        &.textae-editor__type-pallet__entity-type__use-number {
-            .textae-editor__type-pallet__entity-type__use-number__number {
+        &.textae-editor__type-pallet__use-number {
+            .textae-editor__type-pallet__use-number__number {
                 display: inline-block;
-                width: 100%;
-                height: 100%;
+                width: 22px;
+                height: 22px;
                 padding: 3px;
             }
         }
@@ -81,7 +81,7 @@
     table {
         width: 100%;
     }
-    &__entity-type {
+    &__row {
         opacity: 0.8;
         &:hover {
             opacity: 1;
