MODIFY: show default type icon.

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -48,6 +48,16 @@
             padding: 5px;
             max-width: 500px;
             text-align: left;
+            .textae-editor__type-pallet__default-icon {
+                &:before {
+                    position: relative;
+                    display: inline-block;
+                    top: 1px;
+                    font-family: FontAwesome;
+                    content: "\f046";
+                    font-size: 1.3em;
+                }
+            }
         }
         &.textae-editor__type-pallet__use-number {
             .textae-editor__type-pallet__use-number__number {
