--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -28,6 +28,28 @@
     user-select: none;
     width: auto;
     z-index: 90;
+    &__title {
+        float: left;
+        font-size: 1.4em;
+    }
+    &__buttons {
+        float: right;
+        display: flex;
+        margin-bottom: 6px;
+    }
+    &__button {
+        display: inline-block;
+        margin: 6px 4px 0 4px;
+        width: 16px;
+        height: 16px;
+        cursor: pointer;
+        &--read {
+            background: url(images/btn_read_16.png);
+        }
+        &--write {
+            background: url(images/btn_write_16.png);
+        }
+    }
     table {
         .table;
     }
