--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -43,6 +43,18 @@
         width: 16px;
         height: 16px;
         cursor: pointer;
+        &--add {
+            &:before {
+                position: relative;
+                display: inline-block;
+                top: 1px;
+                left: 0px;
+                font-family: FontAwesome;
+                content: "\f067";
+                font-size: 1.5em;
+                color: #444;
+            }
+        }
         &--read {
             background: url(images/btn_read_16.png);
         }
